[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/generic/background_2.png" type="Texture" id=1]
[ext_resource path="res://assets/generic/mountains.png" type="Texture" id=2]
[ext_resource path="res://assets/spacegame/rocket.png" type="Texture" id=3]
[ext_resource path="res://effects/rocketlaunch_animatino.tres" type="Animation" id=4]
[ext_resource path="res://spacegame/Transition.gd" type="Script" id=5]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.00392157, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 0.28125, 0, 1, 0.242188, 0.242188, 0.242188, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 31.5
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
angular_velocity = 235.1
angular_velocity_random = 0.07
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 0.27
scale = 10.0
scale_random = 0.1
color_ramp = SubResource( 2 )

[node name="Transition" type="Node2D"]
position = Vector2( 0, 3749.53 )
script = ExtResource( 5 )
next_scene_path = "res://spacegame/SpaceGame.tscn"
message = "Now we will go to the moon. Unfortunatly there are more sattelites now than in the time the book was originally published. Try to avoid them!"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]
enable_food_bar = false
enable_timer = false

[node name="background_2" type="Sprite" parent="."]
position = Vector2( 1080.66, -796.83 )
scale = Vector2( 5.61367, 1 )
texture = ExtResource( 1 )

[node name="mountains" type="TextureRect" parent="."]
margin_left = -4656.0
margin_top = 271.0
margin_right = 6778.0
margin_bottom = 483.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rocket" type="Sprite" parent="."]
position = Vector2( 0.560059, 398.548 )
scale = Vector2( 0.561181, 0.561181 )
texture = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="rocket"]
show_behind_parent = true
position = Vector2( 0, 135.04 )
scale = Vector2( 1.78195, 1.78195 )
amount = 500
process_material = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="rocket"]
visible = false
scale = Vector2( 1.78195, 1.78195 )
current = true
zoom = Vector2( 2, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/launch = ExtResource( 4 )

[node name="LaunchTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="LaunchTimer" to="." method="_on_LaunchTimer_timeout"]
